# gemini-search

./: .gitignore  Readme.md  pyproject.toml  requirements.txt  run_index.py
scripts/: chat_cli.py  inspect_db.py  reindex_embeddings.py  search_cli.py  test_agent_grounding.py  test_agent_memory.py  test_google_apis.py  test_search_and_chroma.py
src/multimodal_search/: __init__.py  main.py  run_index.py
src/multimodal_search/agent/: __init__.py  chains.py
src/multimodal_search/agent/tools/: __init__.py  search_tools.py
src/multimodal_search/api/: __init__.py  dependencies.py
src/multimodal_search/api/middleware/: __init__.py  cors.py
src/multimodal_search/api/routes/: chat.py  documents.py  ingest.py  render.py  search_routes.py
src/multimodal_search/core/: __init__.py  config.py  database.py  memory_db.py  storage.py  vector_store.py
src/multimodal_search/core/schemas/: __init__.py  document.py  search.py  vision.py
src/multimodal_search/indexer/: __init__.py  pipeline.py  worker.py
src/multimodal_search/search/: __init__.py  engine.py  keyword_search.py
src/multimodal_search/services/: __init__.py  gcp_vision.py  gemini_client.py  vertex_embedder.py  web_search.py
src/multimodal_search/utils/: __init__.py  geometry.py  image_processing.py
tests/: conftest.py  test_api.py  test_google_integration.py
ui/: index.html  package-lock.json  package.json
ui/src/: App.tsx  index.css
ui/src/api/: chat.ts  client.ts  documents.ts  ingest.ts  search.ts
ui/src/pages/: ReaderPage.tsx  SearchPage.tsx
ui/src/store/: appStore.ts
ui/src/types/: api.ts
(+26 files in other folders)
